--- a/maincss/css/style.css
+++ b/maincss/css/style.css
@@ -204,11 +204,12 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background-image: url("../maincss/img/hero.jpg") top center;
-  background-size:100% 100%;
+ }
+.heroimg{
+  width: 100%;
+  height: 100vh;
 }
-
-#hero:before {
+/* #hero:before {
   content: "";
   background: rgba(5, 13, 24, 0.3);
   position: absolute;
@@ -217,7 +218,7 @@ h1, h2, h3, h4, h5, h6 {
   left: 0;
   right: 0;
   z-index: 1;
-}
+} */
 
 #hero .hero-container {
   position: relative;
