--- a/maincss/css/style.css
+++ b/maincss/css/style.css
@@ -224,6 +224,7 @@ h1, h2, h3, h4, h5, h6 {
   position: relative;
   z-index: 2;
   min-width: 300px;
+  bottom:50%;
 }
 
 #hero h1 {
@@ -233,7 +234,6 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 56px;
   color: #fff;
 }
-
 #hero p {
   color: #fff;
   margin-bottom: 50px;
